# VoidGameCompanion

./: .gitignore  Cargo.toml
cpp/: CMakeLists.txt
cpp/include/: action_queue.h  gc_common.h  mc_pathfinder.h  mc_protocol.h  mc_world.h
cpp/src/: action_queue.cpp  ffi.cpp  mc_pathfinder.cpp  mc_protocol.cpp  mc_world.cpp
crates/gc_cli/: Cargo.toml
crates/gc_cli/src/: main.rs
crates/gc_core/: Cargo.toml
crates/gc_core/src/: auth.rs  config.rs  coordinator.rs  game_trait.rs  lib.rs  llm_bridge.rs  persona.rs  tts.rs
crates/gc_dsp/: Cargo.toml
crates/gc_dsp/src/: lib.rs
crates/gc_factorio/: Cargo.toml
crates/gc_factorio/src/: lib.rs
crates/gc_minecraft/: Cargo.toml
crates/gc_minecraft/src/: bot.rs  combat.rs  connection.rs  inventory.rs  lib.rs  world_view.rs
zig/: build.zig  build.zig.zon
zig/src/: allocator.zig  chunk_decoder.zig  nbt_parser.zig  packet_codec.zig  root.zig  zlib_stream.zig
