[workspace]
resolver = "2"
members = [
    "crates/gc_core",
    "crates/gc_minecraft",
    "crates/gc_factorio",
    "crates/gc_dsp",
    "crates/gc_cli",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive", "env"] }
chrono      = "0.4"
rand        = "0.8"
async-trait = "0.1"
