[package]
name    = "gc_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
clap       = { workspace = true }
chrono     = { workspace = true }
rand        = { workspace = true }
async-trait = { workspace = true }
